Mise en place du système de choix des secteurs en fonction du département choisi (AJAX)

--- a/src/PA/AnnonceBundle/Resources/config/routing.yml
+++ b/src/PA/AnnonceBundle/Resources/config/routing.yml
@@ -7,3 +7,7 @@ pa_annonce_homepage:
 pa_annonce_ajouter:
     path:     /creer
     defaults: { _controller: PAAnnonceBundle:Annonce:creerAnnonce }
+
+pa_annonce_secteur:
+    path:     /choixdepartement
+    defaults: { _controller: PAAnnonceBundle:Annonce:affSecteur }
