Suite des changements de design des pages
Le plus gros a été fait. Va me rester à récupérer tous vos fichiers
(genre AnnoncesBundle et UserBundle (d'ailleurs, je dois récupérer quoi
? Seulement le contenu des deux bundles ?)) . Par contre, plus de js sur
la top-navbar ... Je vais voir ça ...

--- a/src/PA/GeneralBundle/Resources/config/routing.yml
+++ b/src/PA/GeneralBundle/Resources/config/routing.yml
@@ -38,6 +38,11 @@ pa_general_mentions:
     defaults: { _controller: PAGeneralBundle:Default:afficherMentions }
 
 
+pa_general_connexion:
+    path:     /connexion/
+    defaults: { _controller: PAGeneralBundle:Default:connexion }
+
+
 pa_general_deconnexion:
     path:     /deconnexion/
     defaults: { _controller: PAGeneralBundle:Default:deconnexion }
