Ajout de l'interface administrateur. Bon, je ne trouve tjrs pas comment faire fonctionner le jquery du bandeau ... ça commence à me gonfler ...

--- a/src/PA/GeneralBundle/Resources/config/routing.yml
+++ b/src/PA/GeneralBundle/Resources/config/routing.yml
@@ -56,3 +56,8 @@ pa_general_inscription:
 pa_general_deconnexion:
     path:     /deconnexion/
     defaults: { _controller: PAGeneralBundle:Default:deconnexion }
+
+
+pa_general_interface:
+    path:     /admin/interfaceGestion/
+    defaults: { _controller: PAGeneralBundle:Default:afficheInterface }
