Ajout page Mes Annonces, lien avec le formulaire de creation d'une annonce, mise en forme des annonces, correctif de routes

--- a/src/PA/AnnonceBundle/Resources/config/routing.yml
+++ b/src/PA/AnnonceBundle/Resources/config/routing.yml
@@ -23,3 +23,7 @@ pa_annonce_afficher_offre:
 pa_annonce_afficher_demande:
     path:     /demandes
     defaults: { _controller: PAAnnonceBundle:Annonce:afficherAnnoncesDemande }
+
+pa_annonce_afficher_mesannonces:
+    path:     /espacemembre/mes-annonces
+    defaults: { _controller: PAAnnonceBundle:Annonce:afficherMesAnnonces }
