Modifier Annonce, MAJ CSS pour la bandeau

--- a/src/PA/AnnonceBundle/Resources/config/routing.yml
+++ b/src/PA/AnnonceBundle/Resources/config/routing.yml
@@ -8,6 +8,10 @@ pa_annonce_ajouter:
     path:     /espacemembre/creer
     defaults: { _controller: PAAnnonceBundle:Annonce:creerAnnonce }
 
+pa_annonce_modifier:
+    path:     /espacemembre/modifier/{id}
+    defaults: { _controller: PAAnnonceBundle:Annonce:modifierAnnonce }
+
 pa_annonce_secteur:
     path:     /choixdepartement
     defaults: { _controller: PAAnnonceBundle:Annonce:affSecteur }
