--- a/src/PA/AnnonceBundle/Resources/config/routing.yml
+++ b/src/PA/AnnonceBundle/Resources/config/routing.yml
@@ -31,3 +31,7 @@ pa_annonce_afficher_demande:
 pa_annonce_afficher_mesannonces:
     path:     /espacemembre/mes-annonces
     defaults: { _controller: PAAnnonceBundle:Annonce:afficherMesAnnonces }
+
+pa_annonce_detail_annonce:
+    path:     /AMODIFIER
+    defaults: { _controller: PAAnnonceBundle:Annonce:afficherDetailAnnonce }
