--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -74,3 +74,13 @@ fos_user:
     firewall_name: main
     use_listener:  false
     user_class:    PA\UserBundle\Entity\User
+    registration:
+        form:
+            type: pa_userbundle_user
+
+services:
+    PA.registration.form.type:
+        class: PA\UserBundle\Form\UserType
+        arguments: [%fos_user.model.user.class%]
+        tags:
+            - { name: form.type, alias: pa_userbundle_user }
