Modification de la taille des descriptions des annonces. Reste à le rajouter sur la page des ofres et demandes et à poser une maxsize aux thumbnails ! Ajout d'un service Twig

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -77,3 +77,8 @@ fos_user:
     registration:
         form:
             type: pa_userbundle_user
+
+# Redimensionnement image annonces
+#thumbnail_filter:
+#     type:    thumbnail
+#     options: { size: [750, 450], mode: outbound }
