--- a/src/PA/AnnonceBundle/Resources/config/routing.yml
+++ b/src/PA/AnnonceBundle/Resources/config/routing.yml
@@ -33,7 +33,7 @@ pa_annonce_afficher_mesannonces:
     defaults: { _controller: PAAnnonceBundle:Annonce:afficherMesAnnonces }
 
 pa_annonce_detail_annonce:
-    path:     /AMODIFIER
+    path:     /detail/{id}
     defaults: { _controller: PAAnnonceBundle:Annonce:afficherDetailAnnonce }
 
 afficher_resultat_annonce:
