--- a/src/PA/UserBundle/Resources/config/routing.yml
+++ b/src/PA/UserBundle/Resources/config/routing.yml
@@ -1,3 +1,3 @@
-pa_user_homepage:
-    path:     /hello/{name}
-    defaults: { _controller: PAUserBundle:Default:index }
+pa_user_mon_compte:
+    path:     /mon-compte/
+    defaults: { _controller: PAUserBundle:Default:modifierUser }
